<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cardEditor.CardEditorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/title_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/title_edit"
                android:text="@string/title" />

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="title"
                android:inputType="text" />

            <TextView
                android:id="@+id/description_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/description_edit"
                android:text="@string/description" />

            <EditText
                android:id="@+id/description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/type_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type" />

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_good"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/good" />

                <RadioButton
                    android:id="@+id/radio_bad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bad" />
            </RadioGroup>

            <TextView
                android:id="@+id/priority_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/priority_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="5"
                android:min="1"
                android:progress="1" />

            <EditText
                android:id="@+id/type_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:visibility="gone" />

            <TextView
                android:id="@+id/periodicity_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/periodicity" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/repetitions_number_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="1"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/repetitions_number_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/times_in" />

                <EditText
                    android:id="@+id/days_number_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="1"
                    android:ems="2"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/days_number_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/days" />

            </LinearLayout>

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/save" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>