<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.habittracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_editor"
            app:destination="@id/nav_editor" />
    </fragment>

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.habittracker.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_editor"
        android:name="com.example.habittracker.ui.editor.EditorFragment"
        android:label="@string/menu_editor"
        tools:layout="@layout/fragment_editor" />
</navigation>