<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.example.habittracker.model.Type" />

        <variable
            name="viewModel"
            type="com.example.habittracker.ui.editor.EditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.editor.EditorFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/title_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/title_edit"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="title"
                    android:inputType="text"
                    android:text="@={viewModel.editor.title}"
                    app:error="@{viewModel.editor.titleError}"
                    app:onFocus="@{viewModel.onFocusTitle}" />

                <TextView
                    android:id="@+id/description_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/description_edit"
                    android:text="@string/description" />

                <EditText
                    android:id="@+id/description_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="description"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:text="@={viewModel.editor.description}"
                    app:error="@{viewModel.editor.descriptionError}"
                    app:onFocus="@{viewModel.onFocusDescription}" />

                <TextView
                    android:id="@+id/type_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <RadioGroup
                    android:id="@+id/type_radio_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_good"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.editor.type == Type.GOOD}"
                        android:onClick="@{() -> viewModel.editor.setGoodType()}"
                        android:text="@string/good" />

                    <RadioButton
                        android:id="@+id/radio_bad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.editor.type == Type.BAD}"
                        android:onClick="@{() -> viewModel.editor.setBadType()}"
                        android:text="@string/bad" />
                </RadioGroup>

                <TextView
                    android:id="@+id/priority_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/priority" />

                <androidx.appcompat.widget.AppCompatSeekBar
                    android:id="@+id/priority_seek_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="5"
                    android:min="1"
                    android:progress="@={viewModel.editor.priority}" />

                <TextView
                    android:id="@+id/periodicity_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/periodicity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/repetitions_number_edit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.editor.repetitionsNumber}"
                        app:error="@{viewModel.editor.repetitionsNumberError}"
                        app:onFocus="@{viewModel.onFocusRepetitionsNumber}"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/repetitions_number_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/times_in" />

                    <EditText
                        android:id="@+id/days_number_edit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:ems="2"
                        android:importantForAutofill="no"
                        android:inputType="numberDecimal"
                        android:text="@={viewModel.editor.daysNumber}"
                        app:error="@{viewModel.editor.daysNumberError}"
                        app:onFocus="@{viewModel.onFocusDaysNumber}"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/days_number_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days" />

                </LinearLayout>

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:enabled="@{viewModel.editor.valid}"
                    android:onClick="@{() -> viewModel.onButtonClick()}"
                    android:text="@string/save" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>