<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.habittracker.ui.cards.CardsViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/cardCollectionsTabLayout"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/cardCollectionsViewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCollectionsTabLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="50dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/purple_500">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/bottom_sheet_peek"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="10dp">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/first_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="30dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/second_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="90dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/sort_by_title"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/first_line"
                    app:layout_constraintTop_toTopOf="@id/first_line"
                    tools:layout_editor_absoluteX="20dp" />

                <ImageButton
                    android:id="@+id/title_sort_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/arrow_up"
                    android:onClick="@{() -> viewModel.sortByTitle(true)}"
                    android:src="@drawable/ic_baseline_keyboard_arrow_up_24"
                    app:layout_constraintBottom_toBottomOf="@id/first_line"
                    app:layout_constraintEnd_toStartOf="@id/title_inverse_sort_button"
                    app:layout_constraintTop_toTopOf="@id/first_line" />

                <ImageButton
                    android:id="@+id/title_inverse_sort_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/arrow_down"
                    android:onClick="@{() -> viewModel.sortByTitle(false)}"
                    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                    app:layout_constraintBottom_toBottomOf="@id/first_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/first_line" />

                <EditText
                    android:id="@+id/search_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:afterTextChanged="@{() ->  viewModel.refreshValue()}"
                    android:hint="@string/search_bar_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@={viewModel.searchBarLiveData}"
                    android:textSize="16sp"

                    app:layout_constraintBottom_toBottomOf="@id/second_line"
                    app:layout_constraintTop_toTopOf="@id/second_line"
                    tools:ignore="LabelFor"
                    tools:layout_editor_absoluteX="20dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/card_create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:contentDescription="@string/card_create_button"
            android:src="@drawable/ic_baseline_add_24"
            app:borderWidth="0dp"
            app:layout_anchor="@+id/bottom_sheet"
            app:layout_anchorGravity="top|end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>